[gd_scene load_steps=18 format=3 uid="uid://buy87j1duaubj"]

[ext_resource type="Script" uid="uid://s3nkuve8qnbs" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="Texture2D" uid="uid://csjck1wjt8d4b" path="res://logo.webp" id="2_0xm2m"]
[ext_resource type="AudioStream" uid="uid://uug1xl833fbt" path="res://blipSelect.wav" id="2_h2yge"]

[sub_resource type="Shader" id="Shader_h2yge"]
code = "shader_type canvas_item;

uniform vec3 color: source_color;
uniform float lineWidth : hint_range(0.0, 100.0, 0.01);
uniform vec2 size;
uniform sampler2D noise: filter_nearest;
uniform sampler2D noise2: filter_nearest;
uniform float edge_fade : hint_range(0.0, 1.0, 0.1);
uniform float wave_speed: hint_range(0.0, 10.0, 0.1);
uniform float opacity: hint_range(0.0, 1, 0.001);

void fragment() {
	
	float n = texture(noise,mod(UV+-TIME*wave_speed/21.2,1.0)).r;
	float n2 = texture(noise2,mod(UV+14.7+TIME*wave_speed/40.3,1.0)).r;;
	float n3 = clamp(0.0,0.3+pow(n+(n2*0.4),3.0)*1.5,1.0);
	COLOR.rgb = color + vec3(n3);
	
	vec2 m = 1.0-(edge_fade*abs(UV-0.5)*2.0*size-size+1.0+lineWidth/50.0);
	float ma = min(m.x,m.y);
	
	float uvx = mod(UV.x-((n3-0.5)/100.0)-(mod(size.x,2)/2.0+0.5),1.0/size.x)*size.x;
	float uvy = mod(UV.y-((n3-0.5)/100.0)-(mod(size.y,2)/2.0+0.5),1.0/size.y)*size.y;
	vec2 uv = vec2(uvx,uvy);
	vec2 w = size*max(n3,0.5)*lineWidth/1000.0;
	if(((uv.x>=w.x)&&(uv.x<=1.0-w.x))&&((uv.y>=w.y)&&(uv.y<=1.0-w.y))){
		discard;
	}
	COLOR.a = ma*n3 * opacity;
}"

[sub_resource type="FastNoiseLite" id="FastNoiseLite_1bvp3"]
seed = 365

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_lquwl"]
seamless = true
seamless_blend_skirt = 1.0
noise = SubResource("FastNoiseLite_1bvp3")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_7mycd"]
seed = 440

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_272bh"]
seamless = true
seamless_blend_skirt = 1.0
noise = SubResource("FastNoiseLite_7mycd")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5vw27"]
shader = SubResource("Shader_h2yge")
shader_parameter/color = Color(0.281187, 0.281187, 0.281187, 1)
shader_parameter/lineWidth = 0.86
shader_parameter/size = Vector2(128, 128)
shader_parameter/noise = SubResource("NoiseTexture2D_lquwl")
shader_parameter/noise2 = SubResource("NoiseTexture2D_272bh")
shader_parameter/edge_fade = 1.0
shader_parameter/wave_speed = 1.7
shader_parameter/opacity = 0.015

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xm2m"]
bg_color = Color(0.26, 0.26, 0.26, 0.375)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 6
anti_aliasing_size = 1.555

[sub_resource type="LabelSettings" id="LabelSettings_7dm0k"]
font_size = 42

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ig7tw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7mycd"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.733005, 0.733005, 0.733005, 0.8)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h2yge"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.6, 0.6, 0.6, 0.75)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lquwl"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.733005, 0.733005, 0.733005, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bvp3"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.6, 0.6, 0.6, 0.75)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_0xm2m"]
font_size = 28

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("2_h2yge")
bus = &"Sounds"

[node name="BGShader" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_5vw27")
layout_mode = 2
anchor_left = 0.0138889
anchor_top = 0.0246914
anchor_right = 0.986111
anchor_bottom = 0.975309
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="BGColor" type="ColorRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.555775, 0.615499, 0.765412, 1)

[node name="MarginContainer" type="MarginContainer" parent="BGColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 128
theme_override_constants/margin_bottom = 128

[node name="BGImage" type="TextureRect" parent="BGColor/MarginContainer"]
layout_mode = 2
texture = ExtResource("2_0xm2m")
expand_mode = 5
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0xm2m")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Generatore Randomico Di Numeri
(RNG)"
label_settings = SubResource("LabelSettings_7dm0k")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Range"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Min"
horizontal_alignment = 2
vertical_alignment = 1

[node name="minSpinBox" type="SpinBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Max"
horizontal_alignment = 2
vertical_alignment = 1

[node name="maxSpinBox" type="SpinBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxEmpty_ig7tw")

[node name="Button" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_7mycd")
theme_override_styles/hover = SubResource("StyleBoxFlat_h2yge")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lquwl")
theme_override_styles/normal = SubResource("StyleBoxFlat_1bvp3")
text = "Genera"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxEmpty_ig7tw")

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Generated number:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="generatedNumberLabel" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
label_settings = SubResource("LabelSettings_0xm2m")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="sfxMuteButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxFlat_7mycd")
theme_override_styles/hover = SubResource("StyleBoxFlat_h2yge")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lquwl")
theme_override_styles/normal = SubResource("StyleBoxFlat_1bvp3")
toggle_mode = true
button_pressed = true
action_mode = 0
text = "ON"

[connection signal="value_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer/minSpinBox" to="." method="_on_min_spin_box_value_changed"]
[connection signal="value_changed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/VBoxContainer/HBoxContainer/HBoxContainer2/maxSpinBox" to="." method="_on_max_spin_box_value_changed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/HBoxContainer/sfxMuteButton" to="." method="_on_button_toggled"]
